# realtime_stitch-for-ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/realtime_stitch/: adjusterimage.h  estimator.h  exposcompensation.h  filterimage.h  findfeature.h  findseam.h  focalsdecide.h  imageblender.h  imagecropper.h  imagescaler.h  inference.h  pairwisematches.h  runyolo.h  stitchingloop.h  warpingimage.h
nodes/: realtime_stitch_node.cpp  runyolo_node.cpp  temp.cpp
src/: adjusterimage.cpp  estimator.cpp  exposcompensation.cpp  filterimage.cpp  findfeature.cpp  findseam.cpp  focalsdecide.cpp  imageblender.cpp  imagecropper.cpp  imagescaler.cpp  inference.cpp  pairwisematches.cpp  runyolo.cpp  stitchingloop.cpp  warpingimage.cpp
